<resources>
    <string name="app_name">BasicSampleApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DataNapps</string>
    <string name="nav_header_subtitle">datanapps@gamil.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- HOME -->
    <string name="title_movies_list">Movies</string>
    <!-- HOME -->
    <string name="title_gallery">Gallery</string>


    <!-- ABOUT US -->
    <string name="title_aboutus">AboutUs</string>
    <string name="share_this_app">Share this app</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="suggestion">Suggestion</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="version">Version %s</string>
    <string name="app_detail"> App detail </string>


</resources>
