<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.aboutus.AboutUsActivity"
    tools:showIn="@layout/activity_aboutus">
    <!--   app:layout_behavior="@string/appbar_scrolling_view_behavior" -->

    <RelativeLayout
        android:id="@+id/rl_about_us_app_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_app_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"

            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_app_logo"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_app_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/version" />



        <TextView
            android:id="@+id/tv_app_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_app_version"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/colorBlack"
            android:text="@string/app_detail" />

    </RelativeLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/rl_about_us_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@+id/rl_about_us_app_detail">

        <TextView
            android:id="@+id/tv_share_this_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/share_this_app"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:background="@color/colorGray"
            android:alpha="0.4"
            app:layout_constraintTop_toBottomOf="@+id/tv_share_this_app" />


        <TextView
            android:id="@+id/tv_rate_this_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/rate_this_app"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider1" />

        <TextView
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.4"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:background="@color/colorGray"
            app:layout_constraintTop_toBottomOf="@+id/tv_rate_this_app" />


        <TextView
            android:id="@+id/tv_suggestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/suggestion"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <TextView
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.4"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:background="@color/colorGray"
            app:layout_constraintTop_toBottomOf="@+id/tv_suggestions" />


        <TextView
            android:id="@+id/tv_contact_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/contact_us"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <TextView
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.4"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:background="@color/colorGray"
            app:layout_constraintTop_toBottomOf="@+id/tv_contact_us" />


        <TextView
            android:id="@+id/tv_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/privacy_policy"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />

        <TextView
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.4"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:background="@color/colorGray"
            app:layout_constraintTop_toBottomOf="@+id/tv_privacy_policy" />


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>